Fixed layout off center and added clickable modal to exit

--- a/style.scss
+++ b/style.scss
@@ -24,7 +24,6 @@ html, body {
   min-height:100%;
   text-align: center;
   color: #ffffff;
-  padding: 1em;
   overflow-x: hidden;
 
   .share {
